<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OriginalASO_2014_002</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="todayOne">今日の一言</string>
    <string name="addWord">ひとことを登録</string>
    <string name="Mainte">メンテ</string>
    <string name="add">登録</string>
    <string name="wordCheck">ひとことチェック</string>
    <string name="back">戻る</string>
    <string name="remove">削除</string>

</resources>
